--- a/main.html
+++ b/main.html
@@ -8,6 +8,50 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<div>
+		<label for="name">Name</label>
+		<input id="name" type="text">
+		</div>
+
+		<div>
+		<label for="email">Email</label>
+		<input id="email" type="email">
+		</div>
+
+		<div>
+		<label for="gender">Gender</label>
+		<input id="Male" type="radio" name="gender">Male
+		<input id="Female" type="radio" name="gender">Female
+		<input id="other" type="radio" name="gender">Other
+		</div>
+
+		<div>
+		<label for="cars">Car Brands</label>
+		<select name="cars" id="cars">
+			<option value="bmw">BMW</option>
+			<option value="audi">Audi</option>
+			<option value="mercedez">Mercedez</option>
+		</select>
+		</div>
+
+		<div>
+		<label for="carage">Car Age</label>
+		<input id="carage" type="number">
+		</div>
+
+		<div>
+		<label for="dop">Date of Purchase(dop)</label>
+		<input id="dop" type="date">
+		</div>
+
+		<div>
+		<label for="password">Password</label>
+		<input id="password" type="password">
+		</div>
+		
+		<button type="submit">Submit</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
