--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@
 	<form>
 		<div>
 		<label for="name">Name</label>
-		<input id="name" type="text">
+		<input id="#name" type="text">
 		</div>
 
 		<div>
 		<label for="email">Email</label>
-		<input id="email" type="email">
+		<input id="#email" type="email">
 		</div>
 
 		<div>
