--- a/main.html
+++ b/main.html
@@ -11,19 +11,19 @@
 	<form>
 		<div>
 		<label for="name">Name</label>
-		<input id="#name" type="text">
+		<input id="name" type="text" name="name">
 		</div>
 
 		<div>
 		<label for="email">Email</label>
-		<input id="#email" type="email">
+		<input id="email" type="email" name="email">
 		</div>
 
 		<div>
 		<label for="gender">Gender</label>
 		<input id="Male" type="radio" name="gender">Male
 		<input id="Female" type="radio" name="gender">Female
-		<input id="other" type="radio" name="gender">Other
+		<input id="Other" type="radio" name="gender">Other
 		</div>
 
 		<div>
@@ -37,17 +37,17 @@
 
 		<div>
 		<label for="carage">Car Age</label>
-		<input id="carage" type="number">
+		<input id="carage" type="number" name="carage">
 		</div>
 
 		<div>
 		<label for="dop">Date of Purchase(dop)</label>
-		<input id="dop" type="date">
+		<input id="dop" type="date" name="dop">
 		</div>
 
 		<div>
 		<label for="password">Password</label>
-		<input id="password" type="password">
+		<input id="password" type="password" name="password">
 		</div>
 		
 		<button type="submit">Submit</button>
