--- a/main.html
+++ b/main.html
@@ -11,17 +11,17 @@
 	<form method="post">
 		<div>
 		<label for="name">Name</label>
-		<input id="name" type="text" name="name">
+		<input id="name" type="text" name="name" required>
 		</div>
 
 		<div>
 		<label for="email">Email</label>
-		<input id="email" type="email" name="email">
+		<input id="email" type="email" name="email" required>
 		</div>
 
 		<div>
 		<label for="gender">Gender</label>
-		<input id="Male" type="radio" name="gender">Male
+		<input id="Male" type="radio" name="gender" required>Male
 		<input id="Female" type="radio" name="gender">Female
 		<input id="Other" type="radio" name="gender">Other
 		</div>
@@ -37,17 +37,17 @@
 
 		<div>
 		<label for="carage">Car Age</label>
-		<input id="carage" type="number" name="carage">
+		<input id="carage" type="number" name="carage" required>
 		</div>
 
 		<div>
 		<label for="dop">Date of Purchase(dop)</label>
-		<input id="dop" type="date" name="dop">
+		<input id="dop" type="date" name="dop" required>
 		</div>
 
 		<div>
 		<label for="password">Password</label>
-		<input id="password" type="password" name="password">
+		<input id="password" type="password" name="password" required>
 		</div>
 		
 		<button type="submit">Submit</button>
